# mcgill-showcases

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml
projects/adaptive-course-assistant-rl-showcase/: Makefile  README.md  pyproject.toml
projects/adaptive-course-assistant-rl-showcase/artifacts/: manifest.json
projects/adaptive-course-assistant-rl-showcase/docs/: 00-start-here.md  algorithm-ladder.md  anti-copy-policy.md  assignment-transfer-guide.md  evaluation-and-governance.md  learning-guide.md  policy-export-and-agent-bridge.md  state-action-reward.md  system-boundary.md
projects/adaptive-course-assistant-rl-showcase/scripts/: __init__.py  run_contextual_bandit.py  run_dqn_optional.py  run_drl_optional.py  run_learning_agent_story.py  run_mdp_policy.py  run_policy_export.py  run_policy_gradient.py  run_ppo_optional.py  run_q_learning.py  run_reward_audit.py  run_rl_family_comparison.py  run_rule_policy.py  run_sarsa.py  run_showcase.py  verify_artifacts.py
projects/adaptive-course-assistant-rl-showcase/tests/: conftest.py  test_artifact_contract.py  test_bandit.py  test_drl.py  test_environment.py  test_evaluation.py  test_learning_agent_story.py  test_policy_gradient.py  test_q_learning.py  test_reward_design.py  test_sarsa.py
projects/agentic-course-assistant-showcase/: .env.example  Makefile  README.md  pyproject.toml
projects/agentic-course-assistant-showcase/adk_course_assistant/: __init__.py  agent.py
projects/agentic-course-assistant-showcase/artifacts/: manifest.json
projects/agentic-course-assistant-showcase/docs/: concept-atlas.md  concept-map.md  lab-guide.md  learning-guide.md  sdk-comparison.md
projects/agentic-course-assistant-showcase/scripts/: run_harness_lab.py  run_openai_showcase.py  run_showcase.py  verify_artifacts.py
projects/agentic-course-assistant-showcase/tests/: test_assistant.py  test_harness_lab.py  test_openai_live_artifacts.py
projects/automl-hpo-showcase/: Makefile  README.md  pyproject.toml
projects/automl-hpo-showcase/docs/: domain-use-cases.md  learning-guide.md  method-notes.md
projects/automl-hpo-showcase/scripts/: run_budget_sensitivity.py  run_hpo_benchmark.py
projects/automl-hpo-showcase/tests/: test_budget.py  test_objective.py  test_schema.py
projects/batch-vs-stream-ml-systems-showcase/: Makefile  README.md  pyproject.toml
projects/batch-vs-stream-ml-systems-showcase/docs/: architecture-notes.md  domain-use-cases.md  learning-guide.md
projects/batch-vs-stream-ml-systems-showcase/scripts/: run_batch.py  run_compare_modes.py  run_stream.py  verify_artifacts.py
projects/batch-vs-stream-ml-systems-showcase/tests/: test_late_events.py  test_parity.py  test_windowing.py
projects/causalml-kaggle-showcase/: .gitignore  Makefile  README.md  pyproject.toml
projects/causalml-kaggle-showcase/docs/: algorithm-cards.md  learning-guide.md  student-worksheet.md
projects/causalml-kaggle-showcase/notebooks/: 01_counterfactuals_and_ate.ipynb  02_meta_learners_s_t_x_r.ipynb  03_uplift_tree_interpretability.ipynb  04_qini_and_targeting_policy.ipynb  05_capstone_policy_simulation.ipynb  06_confounding_conditions.ipynb  07_shap_interpretability.ipynb
projects/causalml-kaggle-showcase/scripts/: confounding_checks.py  download_kaggle_dataset.py  policy_simulator.py  run_contract_baseline.py  run_pipeline.py  verify_learning_artifacts.py
projects/causalml-kaggle-showcase/tests/: test_data.py  test_diagnostics.py  test_evaluation.py  test_policy.py  test_verification.py
projects/credit-risk-classification-capstone-showcase/: Makefile  README.md  pyproject.toml
projects/credit-risk-classification-capstone-showcase/docs/: learning-guide.md
projects/credit-risk-classification-capstone-showcase/notebooks/: 01_data_diagnostics.ipynb  02_modeling_thresholds.ipynb
projects/credit-risk-classification-capstone-showcase/scripts/: run_pipeline.py  verify_artifacts.py
projects/credit-risk-classification-capstone-showcase/tests/: test_data.py  test_modeling.py
projects/demand-api-observability-showcase/: Makefile  README.md  openapi.json  pyproject.toml
projects/demand-api-observability-showcase/docs/: learning-guide.md
projects/demand-api-observability-showcase/scripts/: export_openapi.py  train_demo_model.py  verify_artifacts.py
projects/demand-api-observability-showcase/tests/: test_health.py  test_predict_no_model.py  test_predict_with_model.py
projects/eda-leakage-profiling-showcase/: Makefile  README.md  pyproject.toml
projects/eda-leakage-profiling-showcase/docs/: learning-guide.md
projects/eda-leakage-profiling-showcase/scripts/: run_pipeline.py  verify_artifacts.py
projects/eda-leakage-profiling-showcase/tests/: test_dataset.py
projects/feature-engineering-dimred-showcase/: Makefile  README.md  pyproject.toml
projects/feature-engineering-dimred-showcase/docs/: domain-use-cases.md  learning-guide.md  method-notes.md
projects/feature-engineering-dimred-showcase/scripts/: run_advanced_features.py  run_dimred_comparison.py  run_feature_pipeline.py
projects/feature-engineering-dimred-showcase/tests/: test_dimred.py  (+2 more)
projects/learning-agents-showcase/: Makefile  README.md  pyproject.toml
projects/learning-to-rank-foundations-showcase/: Makefile  README.md  pyproject.toml
projects/mlops-drift-production-showcase/: Makefile  README.md  pyproject.toml
projects/model-release-rollout-showcase/: Makefile  README.md  pyproject.toml
projects/modern-nlp-pipeline-showcase/: Makefile  README.md  pyproject.toml
projects/pytorch-training-regularization-showcase/: Makefile  README.md  pyproject.toml
projects/ranking-api-productization-showcase/: Makefile  README.md  pyproject.toml
projects/sota-supervised-learning-showcase/: .gitignore  Makefile  README.md  pyproject.toml
projects/sota-unsupervised-semisup-showcase/: .gitignore  Makefile  README.md  pyproject.toml
projects/student-support-rl-showcase/: Makefile  README.md  pyproject.toml
projects/xai-fairness-audit-showcase/: Makefile  README.md  pyproject.toml
(+594 files in other folders)
