[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "adaptive-course-assistant-rl-showcase"
version = "0.1.0"
description = "Student-friendly showcase for learned pedagogical intervention in an agentic tutoring workflow."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.9.0",
]
drl = [
  "gymnasium>=0.29.1",
  "stable-baselines3>=2.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_course_assistant_rl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
