[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "automl-hpo-showcase"
version = "0.1.0"
description = "AutoML and hyperparameter optimization showcase with strategy benchmarking."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "optuna>=4.1.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.6.0",
]

[project.optional-dependencies]
advanced = [
  "hyperopt>=0.2.7",
  "mlflow>=2.16.2",
]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/automl_hpo_showcase"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
