[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "demand-api-observability-showcase"
version = "0.1.0"
description = "FastAPI demand prediction service with Prometheus and OpenTelemetry hooks."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.128.2",
  "joblib>=1.4.2",
  "lightgbm>=4.6.0",
  "numpy>=1.26.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-exporter-otlp-proto-http>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-instrumentation-requests>=0.47b0",
  "opentelemetry-sdk>=1.26.0",
  "pandas>=2.2.0",
  "prometheus-client>=0.20.0",
  "pydantic-settings>=2.12.0",
  "scikit-learn>=1.6.0",
  "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/demand_api_observability_showcase"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
