[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ranking-api-productization-showcase"
version = "0.1.0"
description = "Ranking API productization showcase with FastAPI, schema contracts, and structured logging."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.128.2",
  "lightgbm>=4.6.0",
  "numpy>=1.26.0",
  "pydantic-settings>=2.12.0",
  "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ranking_api_showcase"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
