[project]
name = "sota-supervised-learning-showcase"
version = "0.1.0"
description = "Self-guided supervised learning tutorial with reproducible experiments."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.6.0",
]

[project.optional-dependencies]
boosting = [
  "lightgbm>=4.5.0",
  "xgboost>=2.1.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "ty>=0.0.1a14",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sota_supervised_showcase"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
