[project]
name = "sota-unsupervised-semisup-showcase"
version = "0.1.0"
description = "Teaching-first project for unsupervised, semi-supervised, and self-supervised learning on sklearn digits"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "lightgbm>=4.4.0",
  "matplotlib>=3.9.2",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "pydantic>=2.9.2",
  "scikit-learn>=1.5.2",
  "seaborn>=0.13.2",
  "torch>=2.4.1",
  "typer>=0.12.5",
]

[project.optional-dependencies]
advanced = [
  "hdbscan>=0.8.38.post1",
]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
  "ty>=0.0.16",
]

[project.scripts]
sota-showcase = "sota_showcase.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sota_showcase"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
mypy_path = "src"
